--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -3,7 +3,8 @@
 
 .App-header
   background-color: #282c34
-  min-height: 100vh
+  min-height: 20vh
+  padding: 2vh 0 6vh 0
   display: flex
   flex-direction: column
   align-items: center
