--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,16 +1,20 @@
 .App
   text-align: center
 
-.App-header
-  background-color: #282c34
-  min-height: 20vh
-  padding: 2vh 0 6vh 0
-  display: flex
-  flex-direction: column
-  align-items: center
-  justify-content: center
-  font-size: calc(10px + 2vmin)
+.Button
+  background-color: transparent
+  border: none
   color: white
-
-.App-link
-  color: #61dafb
+  outline: none
+  cursor: pointer
+  font: inherit
+  padding: 10px
+  margin: 10px
+  font-weight: bold
+  &:first-of-type
+    margin-left: 0
+    padding-left: 0
+  &.Success
+    color: #5C9210
+  &.Danger
+    color: #944317
