--- a/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.sass
+++ b/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.sass
@@ -8,6 +8,8 @@
   padding: 10px 0
   box-sizing: border-box
   cursor: pointer
+  position: absolute
+  left: 12px
   div
     width: 90%
     height: 3px
