--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -11,10 +11,15 @@
   padding: 10px
   margin: 10px
   font-weight: bold
-  &:first-of-type
-    margin-left: 0
-    padding-left: 0
   &.Success
     color: #5C9210
+    border: 1px solid #5C9210
   &.Danger
     color: #944317
+    border: 1px solid #944317
+
+.CheckoutSummary
+  text-align: center
+  width: 80%
+  margin: auto
+  max-width: 500px
