--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -17,6 +17,10 @@
   &.Danger
     color: #944317
     border: 1px solid #944317
+  &:disabled
+    color: #adadad
+    border-color: #adadad
+    cursor: not-allowed
 
 .CheckoutSummary
   text-align: center
